src/snapshots/rlox__tests__test_programs__hello.lox.stdout.snap
---
source: src/lib.rs
description: "print \"Hello, World!\";\n"
input_file: test_programs/hello.lox
---
Hello, World!

