src/snapshots/rlox__tests__test_programs__math.lox.stdout.snap
---
source: src/lib.rs
description: "print 0.1 + 0.2;\n\nvar a1 = 1 + 2 * 3 - 4 / 5 * 6 + 7 - 8;\nvar a2 = (((1 + (2 * 3)) - ((4 / 5) * 6)) + 7) - 8;\nprint a1;\nprint a2;\nprint a1 == a2;\n\nvar b = (1 + 2) * (3 - 4 / 5) * 6 + 7 + (-8);\nprint b;\nprint b == 38.6;\n\nvar pos_inf =  1/0;\nvar neg_inf = -1/0;\nvar nan =      0/0;\n\nprint pos_inf;\nprint neg_inf;\nprint nan;\nprint nan == nan;\n"
input_file: test_programs/math.lox
---
0.30000000000000004
1.1999999999999993
1.1999999999999993
true
38.6
true
inf
-inf
NaN
false

